Latest IDE and build.gradle