@@ -4,6 +4,8 @@ apply plugin: 'idea'
 apply plugin: 'eclipse'
 
 configurations {
+    endorsed
+    compile.extendsFrom endorsed
     provided
 }
 
@@ -19,6 +21,7 @@ dependencies {
     provided 'org.jboss.spec:jboss-javaee-6.0:1.0.0.Final'
     provided 'org.springframework.data:spring-data-jpa:1.2.0.RELEASE'
     provided 'org.infinispan:infinispan-core:5.1.7.Final'
+    endorsed 'org.jboss.spec.javax.annotation:jboss-annotations-api_1.1_spec:1.0.0.Final'
     compile project(':jpa') {
         transitive = false
     }
@@ -37,4 +40,13 @@ eclipse {
   classpath {
     plusConfigurations += configurations.provided
   }
+}
+
+task stageEndorsed(type: Sync) {
+    from configurations.endorsed
+    into temporaryDir
+}
+tasks.withType(Compile) {
+    dependsOn stageEndorsed
+    options.compilerArgs << "-Djava.endorsed.dirs=${stageEndorsed.destinationDir}"
 }
